Change compilation version to Java 8